docs/versioned_docs/version-1.2.0/smart-contracts/example/loan.md
---
sidebar_position: 5
title: Loan contract
---

In our project we will also implement [PSP-721](../PSP721/psp721.md) 
token. This token will represent a loan of a user who borrowed some assets. 
Upon borrowing assets the contract will mint an NFT to them, which will hold 
the information about their loan, namely the user who borrowed the assets, 
address of the asset which was used as collateral, how much collateral was 
deposited, what asset was borrowed, and how much, the liquidation price of 
the loan, timestamp of when was the loan performed, and information whether 
the loan is liquidated or not. This data will be stored in a separate storage 
trait, which we will derive in our NFT contract. We do this to separate storage 
from the logic, and we will do this in the lending contract as well. 
We do not want anybody to just mint and burn these, so we will implement 
the [Ownable](../ownable) extension in our NFT. The mint and burn 
logic will be covered differently, we will not be using the mintable and 
burnable extensions.

The `LoanContract` will contain several methods defined in the `Loan` trait.
These methods are restricted and can be called only by an owner of the contract.
There is not too much logic to split it, so everything will be implemented
in the body of the contract.

## Definition of the `Loan` trait

In the `traits/loan.rs`, we will define a `Loan` trait.
That trait contains three super traits: `PSP721`, `PSP721Metadata`, and `Ownable`.
Also, the trait contains several methods, and the definition of the `LoanInfo`
(that structure is used during interacting with the contract 
so it is defined in the `traits` instead of the body of the contract).
`LoanRef` can be used by other developers to do a cross contract call to `LoanContract`.

```rust
use brush::{
    contracts::traits::{
        ownable::*,
        psp721::{
            extensions::metadata::*,
            *,
        },
    },
    traits::{
        AccountId,
        Balance,
        Timestamp,
    },
};
use ink_storage::traits::{
    PackedLayout,
    SpreadLayout,
};

#[cfg(feature = "std")]
use ink_storage::traits::StorageLayout;

#[derive(Default, Debug, Clone, scale::Encode, scale::Decode, SpreadLayout, PackedLayout)]
#[cfg_attr(feature = "std", derive(StorageLayout, scale_info::TypeInfo))]
pub struct LoanInfo {
    pub borrower: AccountId,
    pub collateral_token: AccountId,
    pub collateral_amount: Balance,
    pub borrow_token: AccountId,
    pub borrow_amount: Balance,
    pub liquidation_price: Balance,
    pub timestamp: Timestamp,
    pub liquidated: bool,
}

#[brush::wrapper]
pub type LoanRef = dyn Loan + PSP721 + PSP721Metadata + Ownable;

#[brush::trait_definition]
pub trait Loan: PSP721 + PSP721Metadata + Ownable {
    /// This function initalizes data of a loan and mint token inside it
    #[ink(message)]
    fn create_loan(&mut self, loan_info: LoanInfo) -> Result<(), PSP721Error>;

    /// This function frees data of a loan and burn token inside it
    #[ink(message)]
    fn delete_loan(&mut self, initiator: AccountId, loan_id: Id) -> Result<(), PSP721Error>;

    /// This function will be used when the user repays their loan only partially
    #[ink(message)]
    fn update_loan(
        &mut self,
        loan_id: Id,
        new_borrow_amount: Balance,
        new_timestamp: Timestamp,
        new_collateral_amount: Balance,
    ) -> Result<(), PSP721Error>;

    /// This function will set a loan to liquidated
    #[ink(message)]
    fn liquidate_loan(&mut self, loan_id: Id) -> Result<(), PSP721Error>;

    /// Function returns `LoanInfo` by `Id`
    #[ink(message)]
    fn get_loan_info(&self, loan_id: Id) -> Result<LoanInfo, PSP721Error>;
}
```

## Add dependencies

In addition to the dependencies imported in the [PSP-721](../PSP721/psp721.md)
documentation, we will also add the `ownable` dependency the same way as in the
[ownable](../ownable) documentation. We will be using `LoanContract`
as a dependency in our lending contract to instantiate it. So we need to also add
the `"rlib"` crate type to have the ability to import the `LoanContract` as a dependency.

## Implement the contract

We want a basic [PSP-721](../PSP721/psp721.md) token with metadata and ownable extensions, 
so we will add these to our contract. We will add a `brush::contract` macro to our contract and add some imports:

```rust
#![cfg_attr(not(feature = "std"), no_std)]
#![feature(min_specialization)]

/// This contract will represent the loan of a user
#[brush::contract]
pub mod loan {
    use brush::contracts::{
        ownable::*,
        psp721::extensions::metadata::*,
    };

    #[cfg(not(feature = "ink-as-dependency"))]
    use brush::modifiers;

    #[cfg(not(feature = "ink-as-dependency"))]
    use ink_prelude::{
        string::String,
        vec::Vec,
    };
    #[cfg(not(feature = "ink-as-dependency"))]
    use ink_storage::collections::HashMap as StorageHashMap;
    use lending_project::traits::loan::*;
```
You can notice that we marked some imports with `#[cfg(not(feature = "ink-as-dependency"))]`.
It is needed to remove rust's warnings when we will import `LoanContract` as `ink-as-dependency`
into `LendingContract` for instantiation. When we are importing some contracts as
`ink-as-dependency`, we only import the signature of methods without
the implementation of them. It is why the imports are not used during
`ink-as-dependency` and it is why Rust is throwing warnings.

## Define the storage

We will derive the storage traits related to `PSP-721`, `PSP-721 Metadata`, and 
`Ownable` and declare the fields related to these traits. Also, we will declare 
fields related to `Loan` itself.

```rust
/// Define the storage for PSP721 data, Metadata data and Ownable data
#[ink(storage)]
#[derive(Default, PSP721Storage, OwnableStorage, PSP721MetadataStorage)]
pub struct LoanContract {
    #[PSP721StorageField]
    psp721: PSP721Data,
    #[OwnableStorageField]
    ownable: OwnableData,
    #[PSP721MetadataStorageField]
    metadata: PSP721MetadataData,

    // Fields of current contract
    /// mapping from token id to `LoanInfo`
    loan_info: StorageHashMap<Id, LoanInfo>,
    /// the id of last loan
    last_loan_id: Id,
    /// ids no longer used (can be reused)
    freed_ids: Vec<Id>,
}
```

## Implement the extension traits

We will be using these extensions in our NFT token, so we will implement them for our storage.

```rust
/// implement PSP721 Trait for our NFT
impl PSP721 for LoanContract {}

/// implement Ownable Trait for our NFT
impl Ownable for LoanContract {}

/// implement PSP721Metadata Trait for our NFT
impl PSP721Metadata for LoanContract {}
```

## Implement the Loan trait

We will implement the `Loan` trait. 
All functions except one are restricted by the `only_owner` modifier.

```rust
impl Loan for LoanContract {
    #[modifiers(only_owner)]
    #[ink(message)]
    fn create_loan(&mut self, mut loan_info: LoanInfo) -> Result<(), PSP721Error> {
        let loan_id = self._get_next_loan_id_and_increase()?;
        if self.loan_info.get(&loan_id).is_some() {
            return Err(PSP721Error::Custom(String::from("This loan id already exists!")))
        }
        loan_info.liquidated = false;
        self.loan_info.insert(loan_id, loan_info.clone());
        self._mint_to(loan_info.borrower, loan_id)
    }

    #[modifiers(only_owner)]
    #[ink(message)]
    fn delete_loan(&mut self, initiator: AccountId, loan_id: Id) -> Result<(), PSP721Error> {
        self.loan_info.take(&loan_id);
        self._burn_from(initiator, loan_id)
    }

    #[modifiers(only_owner)]
    #[ink(message)]
    fn update_loan(
        &mut self,
        loan_id: Id,
        new_borrow_amount: Balance,
        new_timestamp: Timestamp,
        new_collateral_amount: Balance,
    ) -> Result<(), PSP721Error> {
        self._update_loan(loan_id, new_borrow_amount, new_timestamp, new_collateral_amount)
    }

    #[modifiers(only_owner)]
    #[ink(message)]
    fn liquidate_loan(&mut self, loan_id: Id) -> Result<(), PSP721Error> {
        self._liquidate_loan(loan_id)
    }

    #[ink(message)]
    fn get_loan_info(&self, loan_id: Id) -> Result<LoanInfo, PSP721Error> {
        let loan_info = self.loan_info.get(&loan_id);
        if loan_info.is_none() {
            return Err(PSP721Error::Custom(String::from("Loan does not exist")))
        }
        Ok(loan_info.cloned().unwrap())
    }
}
```

## Define the constructor and add functions

Finally, we will define the constructor where we will set the name and
the symbol of the token and then initialize the owner of the token
(that owner will be able to mint and burn the tokens).
We will also add several helper functions.

```rust
impl LoanContract {
    /// constructor with name and symbol
    #[ink(constructor)]
    pub fn new() -> Self {
        let mut instance = Self::default();
        instance._init_with_metadata(Some(String::from("LoanContract NFT")), Some(String::from("L-NFT")));
        instance._init_with_owner(Self::env().caller());
        instance
    }

    /// internal function to update data of a loan
    fn _update_loan(
        &mut self,
        loan_id: Id,
        new_borrow_amount: Balance,
        new_timestamp: Timestamp,
        new_collateral_amount: Balance,
    ) -> Result<(), PSP721Error> {
        let loan_info = self.loan_info.get(&loan_id);

        if loan_info.is_none() {
            return Err(PSP721Error::Custom(String::from("This loan does not exist!")))
        }

        let mut loan_info = loan_info.cloned().unwrap();
        loan_info.collateral_amount = new_collateral_amount;
        loan_info.borrow_amount = new_borrow_amount;
        loan_info.timestamp = new_timestamp;

        self.loan_info.insert(loan_id, loan_info);

        Ok(())
    }

    /// internal function to set loan to liquidated
    fn _liquidate_loan(&mut self, loan_id: Id) -> Result<(), PSP721Error> {
        let loan_info = self.loan_info.get(&loan_id);

        if loan_info.is_none() {
            return Err(PSP721Error::Custom(String::from("This loan does not exist!")))
        }

        let mut loan_info = loan_info.cloned().unwrap();
        loan_info.liquidated = true;

        self.loan_info.insert(loan_id, loan_info);

        Ok(())
    }

    /// internal function to return the id of a new loan and to increase it in the storage
    fn _get_next_loan_id_and_increase(&mut self) -> Result<Id, PSP721Error> {
        if self.freed_ids.len() > 0 {
            return Ok(self.freed_ids.pop().unwrap())
        }
        let mut current = self.last_loan_id;
        // It is not fully correct implementation of the increasing. but it is only an example
        for n in 0..32 {
            if current[n] == u8::MAX {
                if n == 31 {
                    return Err(PSP721Error::Custom(String::from("Max Id reached!")))
                } else {
                    current[n] = 0;
                }
            } else {
                current[n] += 1;
                break
            }
        }
        self.last_loan_id = current;
        Ok(current)
    }
}
```